--- a/app/App_Resources/Android/src/main/res/values/strings.xml
+++ b/app/App_Resources/Android/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="app_name">C19 Distance Control</string>
-    <string name="title_activity_kimera">C19 Distance Control</string>
+    <string name="app_name">Distance Control</string>
+    <string name="title_activity_kimera">Distance Control</string>
 </resources>
